--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "layagcs",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Block Chain Game Engine SDK",
   "main": "lib/main.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "ethereumjs-tx": "^1.3.4",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.0",
+    "grunt-contrib-uglify-es": "^3.3.0",
     "loglevel": "^1.6.1",
     "obs-store": "^3.0.0",
     "web3": "^0.20.6"
